--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,7 +32,7 @@ jobs:
       run: mvn -B package --file pom.xml
 
     - name: Run tests with Maven
-      run: mvn -B test --file pom.xml
+      run: mvn -B test --file pom.xml -Dmaven.test.failure.ignore=true
 
     - name: Generate Javadoc
       run: mvn javadoc:javadoc
@@ -41,3 +41,12 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@v4
       with:
         folder: target/docs/javadoc
+
+    - name: Report
+      uses: dorny/test-reporter@v1
+      if: always()
+      with:
+        name: Maven Tests
+        path: target/surefire-reports/*.xml
+        reporter: java-junit
+        fail-on-error: true
