users current chosen settings saved when when save is pressed and changes cancelled when cancel is pressed.

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>junit-jupiter</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>17.0.6</version>
+        </dependency>
     </dependencies>
 
     <build>
